--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-Lukorito<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -144,6 +144,7 @@ Lukorito<!DOCTYPE html>
           <div class="col-lg-8 col-lg-offset-2">
             <div class="modal-body">
               <h1>AREAS</h1>
+              <p>DATABASE MANAGEMENT</p>
               <p>DATA STRUCTURES</p>
               <p>WEB DESIGN AND DEVELOPMENT</p>
               <button id="close" type="button" class="btn btn-default btn-block" data-dismiss="modal"><strong>CLOSE</strong></button>
@@ -162,7 +163,9 @@ Lukorito<!DOCTYPE html>
             <div class="modal-body">
               <h1>TECHNOLOGIES</h1>
               <p>PYTHON</p>
+              <p>SQL</p>
               <p>JAVASCRIPT</p>
+              <p>PHP</p>
               <p>HTML</p>
               <p>CSS</p>
               <button id="close" type="button" class="btn btn-default btn-block" data-dismiss="modal"><strong>CLOSE</strong></button>
@@ -180,11 +183,8 @@ Lukorito<!DOCTYPE html>
           <div class="col-lg-8 col-lg-offset-2">
             <div class="modal-body">
               <h1>TOOLS</h1>
-              <p>ATOM</p>
               <p>PHOTOSHOP</p>
               <p>GIT</p>
-              <p>CODE</p>
-              <p>SUBLIME</p>
               <p>FIREBASE</p>
               <button id="close" type="button" class="btn btn-default btn-block" data-dismiss="modal"><strong>CLOSE</strong></button>
             </div>
@@ -202,8 +202,9 @@ Lukorito<!DOCTYPE html>
             <div class="modal-body">
               <h1>FRAMEWORKS</h1>
               <p>ANGULAR</p>
-              <p>AJANGO</p>
+              <p>DJANGO</p>
               <p>FLASK</p>
+              <p>WORDPRESS</p>
               <button id="close" type="button" class="btn btn-default btn-block" data-dismiss="modal"><strong>CLOSE</strong></button>
             </div>
           </div>
@@ -233,7 +234,7 @@ Lukorito<!DOCTYPE html>
           <img id="img" src="images/instagram.png" class="img-responsive img-thumbnail" alt="">
         </div>
       </div>
-      <center><a href="https://www.github.com/Wafula" target="_blank"><button id="more" class="btn btn-default">SEE MORE</button></a></center>
+      <center><a href="https://www.github.com/WafulaLukorito" target="_blank"><button id="more" class="btn btn-default">SEE MORE</button></a></center>
     </div>
   </section>
 
@@ -345,12 +346,8 @@ Lukorito<!DOCTYPE html>
         </div>
       </div>
       <div id="links">
-        <a href="https://twitter.com/WafulaO" target="_blank"><i class="fa fa-twitter" aria-hidden: "true"></i></a>
-        <a href="https://www.linkedin.com/in/Wafula-oLukorito-3675a0168/" target="_blank"><i class="fa fa-linkedin" aria-hidden: "true"></i></a>
-        <a href="https://github.com/Wafula" target="_blank"><i class="fa fa-github" aria-hidden: "true"></i></a>
-        <a href="https://codepen.io/Wafula" target="_blank"><i class="fa fa-codepen" aria-hidden: "true"></i></a>
-        <a href="https://www.freecodecamp.org/forum/u/Wafula/summary" target="_blank"><i class="fa fa-fire" aria-hidden: "true"></i>
-          <a id="quora" href="https://www.quora.com/profile/Wafula-Lukorito" target="_blank"><strong style="text-decoration: none;color: white; font-size: 30px;">Q</strong></a>
+        <a href="https://www.linkedin.com/in/wafulalukorito/" target="_blank"><i class="fa fa-linkedin" aria-hidden: "true"></i></a>
+        <a href="https://github.com/WafulaLukorito" target="_blank"><i class="fa fa-github" aria-hidden: "true"></i></a>
       </div>
     </div>
     </div>
@@ -365,19 +362,19 @@ Lukorito<!DOCTYPE html>
       </div>
       <div class="row">
 
-        <form method="post" id="say-hi" action="https://formspree.io/Wafulao@gmail.com" class="form-group col-sm-7">
+        <!-- <form method="post" id="say-hi" action="https://formspree.io/Wafulao@gmail.com" class="form-group col-sm-7">
           <input id="name" class="form-control" name="Name" type="text" placeholder="Name" required />
           <input id="email" class="form-control" name="Email" type="email" placeholder="Email" required />
           <textarea id="message" row="10" name="Message" class="form-control" placeholder="Message" required></textarea>
           <input type="hidden" name="_next" value="https://Wafula.github.io/index.html#contact" />
           <input type="hidden" name="_subject" value="New Message" />
           <button id="submit" class="btn btn-default btn-block" type="submit">SEND</button>
-        </form>
+        </form> -->
         <div class="col-sm-5">
           <div id="address-mail-phone">
-            <div><i class="fa fa-map-marker"> Moringa School</i></div>
-            <div><i class="fa fa-envelope-o"> WafulaLukorito@outlook.com</i></div>
-            <div><i class="fa fa-mobile-phone"> +254 777275041</i> <span>OR</span>+254 777275041</div>
+            <div><i class="fa fa-map-marker"> Nairobi, Kenya</i></div>
+            <div><i class="fa fa-envelope-o"> jowaljones@gmail.com</i></div>
+            <div><i class="fa fa-mobile-phone"> +254 728748031</i> </div>
           </div>
 
 
@@ -393,7 +390,7 @@ Lukorito<!DOCTYPE html>
           <blockquote class="blockquote">RESUME</blockquote>
         </div>
       </div>
-      <center><a href="resume/document.Wafula Lukorito  - Resume.pdf" , target="_blank"><button class="btn btn-default fa fa-download" id="download-resume"> DOWNLOAD RESUME</button></a></center>
+      <center><a href="resume\001 Jones wafula Lukorito Technical Resume.pdf" , target="_blank"><button class="btn btn-default fa fa-download" id="download-resume"> DOWNLOAD RESUME</button></a></center>
       <center id="copyright">Copyright &copy; Wafula Lukorito <script>document.write(new Date().getFullYear());</script></center>
     </div>
   </section>
